Updated with 01.007.005 SE binaries. This is R2 of the 1.7.5, The project looks solid enough for a release now.

--- a/Main/SEToolbox/SEToolbox.Image.Library/SEToolbox.ImageLibrary.csproj
+++ b/Main/SEToolbox/SEToolbox.Image.Library/SEToolbox.ImageLibrary.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="OctreeQuantizer.cs" />
     <Compile Include="PaletteQuantizer.cs" />
+    <Compile Include="PaletteReplacerQuantizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quantizer.cs" />
   </ItemGroup>
