--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -95,9 +95,14 @@
     <Compile Include="Interop\SpaceEngineersAPI.cs" />
     <Compile Include="Models\BindableVector3DModel.cs" />
     <Compile Include="Models\BindablePoint3DModel.cs" />
+    <Compile Include="Models\SaveResource.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Models\SelectWorldModel.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\StructureFloatingObjectModel.cs" />
     <Compile Include="Models\SizeModel.cs" />
-    <Compile Include="Models\ThreeDPointFModel.cs" />
     <Compile Include="Models\StructureCharacterModel.cs" />
     <Compile Include="Models\StructureVoxelModel.cs" />
     <Compile Include="Models\StructureBaseModel.cs" />
@@ -106,10 +111,6 @@
     <Compile Include="Models\IStructureBase.cs" />
     <Compile Include="Models\StructureCubeGridModel.cs" />
     <Compile Include="Old\StructureCubeGrid.cs" />
-    <Compile Include="RnD\StructureBaseViewModel.cs" />
-    <Compile Include="RnD\StructureCharacterViewModel.cs" />
-    <Compile Include="RnD\StructureCubeGridViewModel.cs" />
-    <Compile Include="RnD\StructureVoxelViewModel.cs" />
     <Compile Include="Services\CommandAction.cs" />
     <Compile Include="Services\CommandReference.cs" />
     <Compile Include="Services\DelegateCommand.cs" />
@@ -141,15 +142,12 @@
     <Compile Include="Services\WindowWrapper.cs" />
     <Compile Include="Models\ExplorerModel.cs" />
     <Compile Include="Services\RelayCommand.cs" />
-    <Compile Include="Models\SelectWorldModel.cs" />
     <Compile Include="Interop\SpaceEngineersConsts.cs" />
-    <Compile Include="RnD\ImageUtilities.cs" />
     <Compile Include="Support\PropertyChangedExtensions.cs" />
     <Compile Include="Support\ToolboxExtensions.cs" />
     <Compile Include="Old\Tester.cs" />
     <Compile Include="Interop\ClassType.cs" />
     <Compile Include="Old\SEResource.cs" />
-    <Compile Include="Models\SaveResource.cs" />
     <Compile Include="Old\SESupport.cs" />
     <Compile Include="Support\VisualTreeEnumeration.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
@@ -164,7 +162,6 @@
     <Compile Include="ViewModels\StructureCharacterViewModel.cs" />
     <Compile Include="ViewModels\StructureCubeGridViewModel.cs" />
     <Compile Include="ViewModels\StructureVoxelViewModel.cs" />
-    <Compile Include="ViewModels\SyncCollection.cs" />
     <Compile Include="Views\ControlBaseState.xaml.cs">
       <DependentUpon>ControlBaseState.xaml</DependentUpon>
     </Compile>
@@ -180,7 +177,6 @@
     <Compile Include="Views\ControlVoxel.xaml.cs">
       <DependentUpon>ControlVoxel.xaml</DependentUpon>
     </Compile>
-    <Compile Include="RnD\ViewTemplateSelector.cs" />
     <Compile Include="Views\ControlFloatingObject.xaml.cs">
       <DependentUpon>ControlFloatingObject.xaml</DependentUpon>
     </Compile>
@@ -285,6 +281,12 @@
     <Resource Include="app.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\about.png" />
+    <None Include="Resources\cube_molecule.png" />
+    <None Include="Resources\disk_blue.png" />
+    <None Include="Resources\import1.png" />
+    <None Include="Resources\photo_scenery.png" />
+    <None Include="Resources\refresh.png" />
     <None Include="Resources\folder.png" />
     <Resource Include="Documentation\readme.txt" />
     <Content Include="poly2vox.exe">
