Added multi selection on the strucutres, to allow deleting multiple objects. Removed ALT key from buttons on subtoolbar, as it is frustrating, and gets picked up regardless of the context. Use "Delete" key to delete objects (when focused on ListView). Window Title now displays currently open world.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -140,6 +140,8 @@
     <Compile Include="Services\SaveFileDialog.cs" />
     <Compile Include="Services\SaveFileDialogViewModel.cs" />
     <Compile Include="Services\ServiceLocator.cs" />
+    <Compile Include="Services\SynchronizeSelectedItems.cs" />
+    <Compile Include="Services\WeakEventHandler.cs" />
     <Compile Include="Services\WindowWrapper.cs" />
     <Compile Include="Models\ExplorerModel.cs" />
     <Compile Include="Interop\SpaceEngineersConsts.cs" />
