Post release version update. Updated binaries. No significant change from the SpaceEnginners binaries update. Fixed file locking problem with Thumbnail images. Added unit to distance. Calculated Distance for newly imported objects.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Controls\SortableListView.cs" />
     <Compile Include="Converters\BooleanConverter.cs" />
     <Compile Include="Converters\BusyMouseConverter.cs" />
+    <Compile Include="Converters\DistanceConverter.cs" />
     <Compile Include="Converters\CountToVisibilityConverter.cs" />
     <Compile Include="Converters\EnumToResouceConverter.cs" />
     <Compile Include="Converters\InverseBooleanConverter.cs" />
