--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -309,6 +309,7 @@
     <Resource Include="app.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\transform.png" />
     <None Include="Resources\SpaceEngineers16x16.png" />
     <None Include="Resources\export1.png" />
     <None Include="Resources\Asteroid.png" />
