Added more validation of SE content. Added initial code for in-line updates of dependant SE assemblies (WIP).

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Support\RssFeedItem.cs" />
     <Compile Include="Support\ToolboxExtensions.cs" />
     <Compile Include="Interop\ClassType.cs" />
+    <Compile Include="Support\ToolboxUpdater.cs" />
     <Compile Include="Support\VisualTreeEnumeration.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
