--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -351,6 +351,10 @@
       <Project>{967d61a9-c8f0-4c2a-a784-6cda648ecb19}</Project>
       <Name>SEToolbox.ImageShaders</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SEToolboxUpdate\SEToolboxUpdate.csproj">
+      <Project>{0914d968-2b68-4fb4-8554-7238c7a78969}</Project>
+      <Name>SEToolboxUpdate</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
