Moved the SourceVoxel filepath into the model for simplicity. Added range validation into model import. Added experimental gap-less switch into model import, using auotmatic checks if nothing was detected during the voxel import. Updated release version.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -85,6 +85,8 @@
     </ApplicationDefinition>
     <Compile Include="Controls\BusyIndicator.cs" />
     <Compile Include="Controls\SortableListView.cs" />
+    <Compile Include="Converters\RangeRuleI.cs" />
+    <Compile Include="Converters\RangeRuleD.cs" />
     <Compile Include="Converters\BooleanConverter.cs" />
     <Compile Include="Converters\BusyMouseConverter.cs" />
     <Compile Include="Converters\DistanceConverter.cs" />
