--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Services\WindowWrapper.cs" />
     <Compile Include="Models\ExplorerModel.cs" />
     <Compile Include="Interop\SpaceEngineersConsts.cs" />
+    <Compile Include="Support\AppConstants.cs" />
     <Compile Include="Support\ExceptionState.cs" />
     <Compile Include="Support\PropertyChangedExtensions.cs" />
     <Compile Include="Support\RssFeedItem.cs" />
@@ -328,6 +329,9 @@
     <Resource Include="app.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\server_to_client.png" />
+    <None Include="Resources\message_edit.png" />
+    <None Include="Resources\help.png" />
     <None Include="Resources\SECubes16.png" />
     <None Include="Resources\workshop16.png" />
     <None Include="Resources\transform.png" />
