--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -97,6 +97,9 @@
     <Compile Include="Converters\NullImageConverter.cs" />
     <Compile Include="Converters\ResouceToImageConverter.cs" />
     <Compile Include="Converters\StringFormatMultiValueConverter.cs" />
+    <Compile Include="Interop\Asteroids\MyVoxelBackgroundWorker.cs" />
+    <Compile Include="Interop\Asteroids\MyVoxelBuilder.cs" />
+    <Compile Include="Interop\Asteroids\MyVoxelBuilderArgs.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelConstants.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelContentCell.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelContentCellContent.cs" />
@@ -174,6 +177,7 @@
     <Compile Include="Support\PropertyChangedExtensions.cs" />
     <Compile Include="Support\RandomUtil.cs" />
     <Compile Include="Support\RssFeedItem.cs" />
+    <Compile Include="Support\TempfileUtil.cs" />
     <Compile Include="Support\ToolboxExtensions.cs" />
     <Compile Include="Interop\ClassType.cs" />
     <Compile Include="Support\ToolboxUpdater.cs" />
