Updated binaries. Fix for not specifying material for import Asteroid. Fix for changes to SE now hiding rare ores, causing 100% rare ore astoierds to change to 100% non-rare stone. WIP for mirroring structures. Storing Asteroid field detail statically to carry over between dialogs, allowing repeated attempts to generate asteroid field. WIP of 3D model conversion to voxels. Fix 'open folder' not working with comma symbol.

--- a/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
+++ b/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
@@ -111,6 +111,9 @@
     <None Include="TestAssets\asteroid0moon4.vox">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="TestAssets\cube_52x52x52.vox">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="TestAssets\DeformedSphereWithHoles_64x128x64.vox">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
