Updated Binaries. Completed Mirroring for all components. Split out Interop specific Extension methods to reduce confusion. Updated version number prior to release.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Interop\Asteroids\MyVoxelContentCellContent.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelMap.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelMaterialCell.cs" />
+    <Compile Include="Interop\InteropHelper.cs" />
     <Compile Include="Interop\SpaceEngineersAPI.cs" />
     <Compile Include="Models\BindableVector3DModel.cs" />
     <Compile Include="Models\BindablePoint3DModel.cs" />
