--- a/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
+++ b/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
@@ -77,6 +77,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="InteropTests.cs" />
     <Compile Include="VolumentricTests.cs" />
     <Compile Include="VoxelTests.cs" />
     <Compile Include="UnitTest1.cs" />
