Added latest SE binaries. Completed Size for ships with components larger than 1x1x1. Rearranged Convert menu and expanded Framework values. Backing up sandbox files during save. Some code clean up. Removed the .sbo extension that I made up for exports.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -55,6 +55,7 @@
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\References\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Sandbox.CommonLib">
       <HintPath>..\References\Sandbox.CommonLib.dll</HintPath>
     </Reference>
@@ -364,6 +365,7 @@
     <Resource Include="app.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\document_view.png" />
     <None Include="Resources\sort_descending.png" />
     <None Include="Resources\Toolbox_logo.jpg" />
     <None Include="Resources\server_to_client.png" />
